Visual changes for the reviews

--- a/lang/nl.json
+++ b/lang/nl.json
@@ -3,9 +3,14 @@
     "Be the first to write a review": "Schrijf de eerste review",
     "Nickname": "Nickname",
     "No reviews found": "Geen reviews gevonden",
-    "Rating": "Rating",
+    "Rating": "Beoordeling",
     "Review": "Review",
+    "Reviews": "Reviews",
     "Submit Review": "Review indienen",
     "Summary": "Summary",
-    "You submitted your review for moderation.": "Uw review is in behandeling."
+    "Title of your review": "Titel van uw review",
+    "What do you think of this product?": "Wat vind u van dit product?",
+    "Write a review": "Schrijf een review",
+    "You submitted your review for moderation.": "Uw review is in behandeling.",
+    "Your name": "Uw naam"
 }
