Fix missing translation | Remove unused class

--- a/lang/nl.json
+++ b/lang/nl.json
@@ -2,7 +2,7 @@
     "Add Your Review": "Voeg uw review toe",
     "Be the first to write a review": "Schrijf de eerste review",
     "Nickname": "Nickname",
-    "No reviews found": "Geen reviews gevonden",
+    "No reviews yet": "Nog geen reviews",
     "Rating": "Beoordeling",
     "Review": "Review",
     "Reviews": "Reviews",
