Fix translation & sorting translations

--- a/lang/nl.json
+++ b/lang/nl.json
@@ -1,11 +1,15 @@
 {
     "Add Your Review": "Voeg uw review toe",
+    "Are you familiar with this article? Share your experience with others and let us know what you think!": "Bent u bekend met dit artikel? Deel uw ervaring met andere en laat weten wat u er van vindt!",
     "Be the first to write a review": "Schrijf de eerste review",
+    "Load more reviews": "Schrijf een review",
     "Nickname": "Nickname",
     "No reviews yet": "Nog geen reviews",
+    "Product reviews": "Product review",
     "Rating": "Beoordeling",
     "Review": "Review",
     "Reviews": "Reviews",
+    "Share your experience": "Deel uw ervaring",
     "Submit Review": "Review indienen",
     "Summary": "Summary",
     "Title of your review": "Titel van uw review",
