Remove (2) Changed to 2 Reviews

--- a/lang/nl.json
+++ b/lang/nl.json
@@ -9,6 +9,7 @@
     "Rating": "Beoordeling",
     "Review": "Review",
     "Reviews": "Reviews",
+    "Review|:count Reviews": "Review|:count Reviews",
     "Share your experience": "Deel uw ervaring",
     "Submit Review": "Review indienen",
     "Summary": "Summary",
